[project]
name = "orgwarden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tech AI", email = "austinweeksmusic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[project.scripts]
orgwarden = "orgwarden.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "--verbose --capture=no --cov=orgwarden --cov-fail-under=90.0 --cov-report term-missing"
